--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "to-do",
-  "homepage": "https://1oupd.github.io/react-to-do",
+  "homepage": "https://1oupd.github.io/to-do-app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
